[package]
name = "achroma_icc"
version = "0.1.0"
authors = [
    "Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "An ICC encoding and decoding library"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
homepage = "https://github.com/neoncitylights/achroma"
repository = "https://github.com/neoncitylights/achroma"
documentation = "https://docs.rs/achroma_icc/"
categories = [
    "science",
    "graphics",
    "computer-vision",
    "no-std",
]

[dependencies]
bitvec = "1.0.1"
