[package]
name = "rust-template"
version = "0.1.0"
authors = [
	"First Name Last Name, <yourname@gmail.com>",
	"Another Person <anotherperson@outlook.com>"
]
description = "Your description of the Rust library"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
# keywords = []
# categories = []
exclude = [
	".devcontainer",
	".github",
	".vscode",
	".idea",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
	"fuzz",
	"book",
	"benches",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1.0"

# criterion benchmarks
[[bench]]
path = "benches/criterion/fibb.rs"
name = "criterion_fibb"
harness = false

# iai benchmarks
[[bench]]
path = "benches/iai/fibb.rs"
name = "iai_fibb"
harness = false
